nav jump fix
its easier to pad the page instead of putting in a false scroll bar to minimize content jump when the menu activates

--- a/assets/default.css
+++ b/assets/default.css
@@ -40,6 +40,11 @@ body,html,main,div,p,ul,ol,li,h1,h2,h3,h4{
 @media (max-width: 760px){}
 */
 
+:root{
+  --navradius: 5000px;
+  --navpad: 15px;
+}
+
 body,html{
   width: 100%;
   height: 100%;
@@ -55,6 +60,7 @@ body{
   overflow-y: scroll;
   padding: 0px 0px 10px;
   height: auto;
+  box-sizing: border-box;
 }
 br{
   clear: both;
@@ -77,6 +83,7 @@ br{
   box-shadow: inset 0 0 10vh 5vh rgba(120, 120, 120, .3);
 }
 a{
+  color: inherit;
   text-decoration: none;
 }
 p a span,
@@ -84,7 +91,7 @@ li a span,
 p a:visited span,
 li a:visited span{
   text-decoration: underline;
-  color: #000000;
+  /*color: #000000;*/
 }
 
 h1,
@@ -195,9 +202,11 @@ header h2 img{
 }
 footer{
   font-size: 16px;
+  color: #fff;
 }
 footer > div{
-  padding: 24px 15px;
+  background: none;
+  padding: 24px 0px;
 }
 footer ul,
 footer p{
@@ -215,12 +224,12 @@ footer ul li{
 }
 footer p{
   text-align: center;
-  padding: 30px 0px 0px;
+  padding: 16px 0px 0px;
 }
 @media (min-width: 481px){
   footer ul{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
   }
 }
 @media (max-width: 480px){
@@ -275,10 +284,10 @@ nav{
   box-sizing: border-box;
   transition: clip-path 800ms cubic-bezier(0.645, 0.045, 0.355, 1);
 }
-nav + span{
+nav > span{
   background-color: #e8e8e8;
   display: block;
-  position: fixed;
+  position: absolute;
   float: none;
   top: 25px;
   right: 25px;
@@ -287,7 +296,17 @@ nav + span{
   border-radius: 50%;
 
   pointer-events: auto;
-  transition: background-color 800ms cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition: all 800ms cubic-bezier(0.645, 0.045, 0.355, 1);
+  opacity: 0;
+}
+nav + span{
+  display: block;
+  position: fixed;
+  float: none;
+  top: 0px;
+  right: 0px;
+  width: 80px;
+  height: 94px;
 }
 nav + span:after{
   content: '';
@@ -321,15 +340,13 @@ nav ul li:after{
   display: none;
   content: unset;
 }
-
-:root{
-  --navradius: 5000px;
-}
 nav{
+  width: calc(100% + var(--navpad));
   clip-path: ellipse(15px 15px at calc(100% - 40px) 40px);
 }
 .show-nav{
   overflow-y: hidden;
+  padding-right: var(--navpad);
   /*position: fixed;
   top: var(--st, 0);
   inline-size: 100%;
@@ -343,9 +360,12 @@ nav{
 .show-nav nav{
   clip-path: ellipse(var(--navradius) var(--navradius) at calc(100% - 40px) 40px);
   pointer-events: auto;
+  right: 0px;
+  left: auto;
 }
-.show-nav nav + span{
+.show-nav nav > span{
   background: black;
+  opacity: 1;
 }
 
 #about{
